kubernetes/apps/networking/netpols/policies/allow-egress-cloudflare-r2.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-cloudflare-r2
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/r2: allow
  egress:
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
