kubernetes/apps/networking/netpols/policies/allow-egress-google-smtp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-google-smtp
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/google-smtp: allow
  egress:
    - toFQDNs:
        - matchName: "smtp.gmail.com"
      toPorts:
        - ports:
            - port: "465"
              protocol: "TCP"
