kubernetes/apps/networking/netpols/policies/allow-egress-kube-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/kube-apiserver: allow
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
