kubernetes/apps/networking/netpols/policies/allow-egress-mariadb.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-mariadb
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/mariadb: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app.kubernetes.io/instance: mariadb
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
