kubernetes/apps/networking/netpols/policies/allow-ingress-nginx-external.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-nginx-external
spec:
  description: "Allow pods that require ingress to allow traffic from nginx-external, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/nginx-external: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: nginx-external
