kubernetes/apps/networking/netpols/policies/allow-ingress-nginx-internal.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-nginx-internal
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/nginx-internal: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            namespace: networking
            instance: nginx-internal
