kubernetes/apps/networking/netpols/policies/deny-egress-all.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-egress-all
spec:
  description: "Deny all egress traffic"
  endpointSelector:
    matchLabels:
      egress.home.arpa/all: deny
  egress:
    - {}
