kubernetes/apps/networking/netpols/policies/monitor-l7-https.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "l7-visibility"
spec:
  endpointSelector:
    matchLabels:
      monitor.home.arpa/https: enabled
  egress:
    - toPorts:
      - ports:
          - port: "53"
            protocol: ANY
        rules:
          dns:
            - matchPattern: "*"
      - ports:
        - port: "3306"
          protocol: TCP
      - ports:
        - port: "443"
          protocol: ANY
        rules:
          http: [{}]
